--- a/开发说明.md
+++ b/开发说明.md
@@ -24,22 +24,21 @@
 
      1. 到`web/src/router/routes/index.js`中增加侧边栏的定义代码片段,举个例子:
      在export const basicRoutes 下找到合适的位置(我已经给出例子),增加对应的子目录和子菜单栏
-     '''
-    ///////////////////START///////////////////////
-  {
-    name: t('数据收集'),           //侧边栏显示名字
-    path: '/data-collection',      //路由的路径
-    component: Layout,             //展示样式,这边为展示
-    meta: {                          
-      title: t('数据收集'),         //栏目显示名字,就是展示页顶栏的那个东西
-      icon: 'material-symbols:database',   //图标,可以到网站   https://icones.js.org/collection/all?s=net&icon=mdi:play-network  下找
-      order: 10,                   //排序次序
+     ```
+     {
+    name: t('数据收集'), 
+    path: '/data-collection',
+    component: Layout,
+    meta: {
+      title: t('数据收集'),
+      icon: 'material-symbols:database',
+      order: 10,
     },
     children: [
       {
-        name: '论文收集',            
+        name: '论文收集',
         path: 'paper',
-        component: () => import('@/views/data-collection/paper/index.vue'),  //views为web/src/views文件夹,这个意思是:点击后展示页是对应路径下的index.vue
+        component: () => import('@/views/data-collection/paper/index.vue'),  //自己创建;
         meta: {
           title: '论文收集',
           icon: 'material-symbols:edit-document',
@@ -54,10 +53,88 @@
           icon: 'material-symbols:book-4-rounded',
         },
       },
-      .............
-      ///////////////////END///////////////////////////////
+      {
+        name: '文档收集',
+        path: 'document',
+        component: () => import('@/views/data-collection/document/index.vue'),  //自己创建;
+        meta: {
+          title: '文档收集',
+          icon: 'material-symbols:lab-profile',
+        },
+      },
+      {
+        name: '社交媒体收集',
+        path: 'social-media',
+        component: () => import('@/views//data-collection/social-media/index.vue'), //
+        meta: {
+          title: '社交媒体收集',
+          icon: 'mdi:play-network',
+        },
+      },
+    ],
+  },
+      ```
      2. 在`web/src/views`中合适位置新增页面,点击对应栏目就可以展示vue界面了
+      创建文件夹,里面放一个vue文件
 
      3. 在`web/src/api/index.js`中增加api的接口定义
      该文件的其他代码如何定义接口作为参考;
-     ###########待补充
+     ```
+     fetchDocumentData: () => request.get('/document/fetch'),
+     ```
+- **后端**
+     1. 在`app/controllers/`下增加模块操作文件，主要是供api中调用
+     ```
+     # document.py
+      import requests
+      from bs4 import BeautifulSoup
+
+      class DocumentController:
+          @staticmethod
+          async def fetch_data():
+              res = requests.get("https://www.tiobe.com/tiobe-index/")
+              if res.status_code == 200:
+                  sp = BeautifulSoup(res.text, 'html.parser')
+                  best = sp.select('tbody tr td:nth-child(5)')
+                  if len(best) != 0:
+                      result = "TIOBE目前排名前10的编程语言是：\n" + "\n".join(
+                          [f"Top {i+1}: {best[i].getText()}" for i in range(10)]
+                      )
+                      return result
+              return result(content="获取数据失败")
+
+      document_controller = DocumentController()
+      ```
+     2. 注册路由，`app/api/v1/`下新增api文件夹及对应文件(比如xxx模块,就建立xxx文件夹,里面放xxx.py和__init__.py)，并相应修改`app/api/v1/__init__.py`注册路由，这里使用了fastapi
+     ```
+      #app/api/v1/document/__init__.py
+      from fastapi import APIRouter
+      from .document import router
+
+      document_router = APIRouter()
+      #document_router.include_router(router, prefix="/document", tags=["测试"])
+      document_router.include_router(router, tags=["测试"])
+      #此处内容在 系统管理/API管理  点击刷新后  会更新到页面上
+
+      __all__ = ["document_router"]
+     ```
+
+     ```
+     #app/api/v1/document/document.py
+      from fastapi import APIRouter
+      from app.controllers.document import document_controller
+      from app.schemas import Success
+
+      router = APIRouter()
+
+      @router.get("/fetch", summary="获取爬虫数据")
+      async def fetch_document_data():
+          data =  await document_controller.fetch_data()
+          return Success(data = data) 
+    ```
+
+     3. 在`app/core/init_app.py`中增加初始化操作 (非必要操作,暂时不用)
+
+
+
+
