--- a/开发说明.md
+++ b/开发说明.md
@@ -22,8 +22,8 @@
 # 具体操作示例:
    - **前端**
 
-    1. 到`web/src/router/routes/index.js`中增加侧边栏的定义代码片段,举个例子:
-    在export const basicRoutes 下找到合适的位置(我已经给出例子),增加对应的子目录和子菜单栏
+    1. 到`web/src/router/routes/index.js`中增加侧边栏的定义代码片段,举个例子:在export const basicRoutes 下找到合适的位置(我已经给出例子),增加对应的子目录和子菜单栏
+
       ```
       {
         name: t('数据收集'), 
@@ -74,16 +74,21 @@
         ],
       },
       ```
+
     2. 在`web/src/views`中合适位置新增页面,点击对应栏目就可以展示vue界面了
       创建文件夹,里面放一个vue文件
 
+
     3. 在`web/src/api/index.js`中增加api的接口定义
     该文件的其他代码如何定义接口作为参考;
+
     ```
     fetchDocumentData: () => request.get('/document/fetch'),
     ```
+
 - **后端**
     1. 在`app/controllers/`下增加模块操作文件，主要是供api中调用
+
     ```
     # document.py
     import requests
@@ -105,35 +110,36 @@
 
     document_controller = DocumentController()
     ```
+
      2. 注册路由，`app/api/v1/`下新增api文件夹及对应文件(比如xxx模块,就建立xxx文件夹,里面放xxx.py和__init__.py)，并相应修改`app/api/v1/__init__.py`注册路由，这里使用了fastapi
-     ```
-      #app/api/v1/document/__init__.py
-      from fastapi import APIRouter
-      from .document import router
+    ```
+    #app/api/v1/document/__init__.py
+    from fastapi import APIRouter
+    from .document import router
 
-      document_router = APIRouter()
-      #document_router.include_router(router, prefix="/document", tags=["测试"])
-      document_router.include_router(router, tags=["测试"])
-      #此处内容在 系统管理/API管理  点击刷新后  会更新到页面上
+    document_router = APIRouter()
+    #document_router.include_router(router, prefix="/document", tags=["测试"])
+    document_router.include_router(router, tags=["测试"])
+    #此处内容在 系统管理/API管理  点击刷新后  会更新到页面上
 
-      __all__ = ["document_router"]
-     ```
-
-     ```
-     #app/api/v1/document/document.py
-      from fastapi import APIRouter
-      from app.controllers.document import document_controller
-      from app.schemas import Success
-
-      router = APIRouter()
-
-      @router.get("/fetch", summary="获取爬虫数据")
-      async def fetch_document_data():
-          data =  await document_controller.fetch_data()
-          return Success(data = data) 
+    __all__ = ["document_router"]
     ```
 
-     3. 在`app/core/init_app.py`中增加初始化操作 (非必要操作,暂时不用)
+    ```
+    #app/api/v1/document/document.py
+    from fastapi import APIRouter
+    from app.controllers.document import document_controller
+    from app.schemas import Success
+
+    router = APIRouter()
+
+    @router.get("/fetch", summary="获取爬虫数据")
+    async def fetch_document_data():
+        data =  await document_controller.fetch_data()
+        return Success(data = data) 
+    ```
+
+    3. 在`app/core/init_app.py`中增加初始化操作 (非必要操作,暂时不用)
 
 
 
